Added list elements

--- a/index.html
+++ b/index.html
@@ -28,28 +28,30 @@
 
 <!-- Challenge 2: Use appropriate list tag  -->
     <!--Process 1-->
-
+<ul>
+    <li>
     <strong>Step 1: Combine the instant coffee, sugar, and hot water:</strong>
     </dt>
 
     Add 2 tablespoons <u>(tbsp)</u> of instant coffee, 2 <u>tbsp</u> of sugar, and 2 <u>tbsp</u> of hot water to a
     medium mixing bowl
+</li>
 
     <br>
     <!--Process 2-->
-
+    <li>
     <strong>Step 2: Whisk, whisk, whisk until the coffee is light and fluffy!</strong>
 
     Using an electric hand-held mixer, whip the coffee mixture until it is light brown, fluffy, and holds stiff
-    peaks when the whisk is removed.
+    peaks when the whisk is removed.</li>
 
     <br>
     <!--Process 3-->
-
+    <li>
     <strong>Step 3: Serve with Milk:</strong>
 
     Use a spoon to garnish a glass of hot or cold milk with the coffee cream. Serve with a straw, and stir,
-    stir, stir to enjoy!
+    stir, stir to enjoy! </li></ul>
     <hr>
     <p>A recipe contributed & coded by Kalvian, <b>Ananya ❤</b></p>
 </body>
